# social-agents

./: .env.example  Dockerfile.backend  Dockerfile.frontend  PASSWORD_VALIDATION_REMOVED.md  build_log.txt  build_log_2.txt  next.config.mjs  package-lock.json  package.json  render.yaml  tsconfig.tsbuildinfo
docs/: callback.md
python_backend/: .env.example  pyproject.toml  test_posts_credentials.py  test_twitter_api.py
python_backend/docker/: Dockerfile.browser  docker-compose.browser.yml
python_backend/docker/scripts/: start_all.sh
python_backend/src/: main.py
python_backend/src/agents/: __init__.py
python_backend/src/agents/content_improvement_agent/: schemas.py  service.py
python_backend/src/agents/content_strategist_agent/: __init__.py  service.py
python_backend/src/agents/content_strategist_agent/tools/: __init__.py  browser_tools.py
python_backend/src/agents/deep_agents/: __init__.py  agent.py  router.py  subagents.yaml
python_backend/src/agents/deep_agents/skills/blog-post/: SKILL.md
python_backend/src/agents/media_agents/: __init__.py
python_backend/src/agents/media_agents/gemini_image_agent/: __init__.py  schemas.py  service.py
python_backend/src/agents/media_agents/image_agent/: __init__.py  schemas.py  service.py
python_backend/src/agents/media_agents/sora_agent/: __init__.py  schemas.py  service.py
python_backend/src/agents/media_agents/video_agent/: __init__.py  schemas.py  service.py
python_backend/src/agents/media_prompt_agent/: schemas.py  service.py
python_backend/src/api/: __init__.py
python_backend/src/api/v1/: __init__.py  content.py  content_improvement.py  credentials.py  media_generating.py  meta_ads.py  posts.py  voice_live.py  workspace.py
python_backend/src/api/v1/meta_ads/: adsets.py  campaigns.py
python_backend/src/api/v1/social/: __init__.py  instagram.py  twitter.py
python_backend/src/config/: settings.py
python_backend/src/middleware/: auth.py
python_backend/src/schemas/: __init__.py  advantage_plus.py  audiences.py  meta_ads.py
python_backend/src/services/: meta_ads_service.py  meta_credentials_service.py  meta_sdk_client.py  oauth_service.py  social_service.py  supabase_service.py
python_backend/src/services/meta_ads/: __init__.py  meta_ads_service.py  meta_sdk_client.py  sdk_ab_tests.py  sdk_automation_rules.py  sdk_catalogs.py  sdk_insights.py  sdk_settings.py  sdk_targeting.py
python_backend/src/voice_agent/: __init__.py  agent.py
(+98 files in other folders)
